--- a/mcc-manifest-autosave.yml
+++ b/mcc-manifest-autosave.yml
@@ -2,7 +2,7 @@
 
 manifest_file_version: 1.0.0
 project: dspic33ck_bldc_dev_board
-creation_date: 2024-05-03T10:54:38+09:00[Asia/Tokyo]
+creation_date: 2024-05-27T01:10:19.830+09:00[Asia/Tokyo]
 operating_system: Linux
 mcc_mode: IDE
 mcc_mode_version: v6.20
@@ -20,6 +20,7 @@ modules:
 - {name: '@mchp-mcc/adc-multicore-driver', type: MELODY, version: 2.1.4}
 - {name: '@mchp-mcc/clock-16bit-driver', type: MELODY, version: 1.2.1}
 - {name: '@mchp-mcc/delay-blocking-driver', type: MELODY, version: 3.1.0}
+- {name: '@mchp-mcc/dma-16bit-driver', type: MELODY, version: 1.0.7}
 - {name: '@mchp-mcc/dmt-16bit-driver', type: MELODY, version: 1.0.6}
 - {name: '@mchp-mcc/dspic33-configuration-bits', type: MELODY, version: 1.2.2}
 - {name: '@mchp-mcc/icd-16bit-driver', type: MELODY, version: 1.0.3}
@@ -28,6 +29,7 @@ modules:
 - {name: '@mchp-mcc/pic-16bit', type: MELODY, version: 5.11.4}
 - {name: '@mchp-mcc/pic24-dspic33-adc-multicore', type: MELODY, version: 2.4.3}
 - {name: '@mchp-mcc/pic24-dspic33-clock-sib', type: MELODY, version: 1.4.2}
+- {name: '@mchp-mcc/pic24-dspic33-dma', type: MELODY, version: 1.4.0}
 - {name: '@mchp-mcc/pic24-dspic33-dmt-upb', type: MELODY, version: 1.1.1}
 - {name: '@mchp-mcc/pic24-dspic33-interrupt', type: MELODY, version: 1.3.1}
 - {name: '@mchp-mcc/pic24-dspic33-mccp-upb', type: MELODY, version: 1.6.4}
